--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -118,6 +118,8 @@ CSS file.
 @import "_modules/accordion-sidebar";
 @import "_modules/people";
 
+@import "_posts/person";
+
 @import "_pages/blog";
 
 
