--- a/assets/styles/sass/_global.scss
+++ b/assets/styles/sass/_global.scss
@@ -221,6 +221,11 @@ RE-USED ELEMENTS
 	}
 }
 
+button,
+.button {
+	cursor: pointer;
+}
+
 article.page {
 	>div:first-of-type {
 		margin-top: 75px;
