--- a/assets/styles/sass/_modules/_list-circle-list.scss
+++ b/assets/styles/sass/_modules/_list-circle-list.scss
@@ -36,6 +36,14 @@
 				}
 
 			}
+			
+		&.img-wrap {
+			width: 56px;
+			@include breakpoint(medium) {
+				width: 208px;
+			}
+		}
+			
 		}
 		
 	}
