--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -117,6 +117,7 @@ CSS file.
 @import "_modules/testimonial";
 @import "_modules/accordion-sidebar";
 @import "_modules/people";
+@import "_modules/callout";
 
 @import "_posts/person";
 
