--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -118,6 +118,7 @@ CSS file.
 @import "_modules/accordion-sidebar";
 @import "_modules/people";
 @import "_modules/callout";
+@import "_modules/form-typeform";
 
 @import "_posts/person";
 
