--- a/assets/styles/sass/_footer.scss
+++ b/assets/styles/sass/_footer.scss
@@ -221,7 +221,7 @@ footer.footer {
 			background-position: 0 0, 0 0, 100% 0, 0 100%;
 			background-repeat: no-repeat;
 		}
-			a {
+			a.accordion-title {
 				display: flex;
 				font-size: rem-calc(16);
 				line-height: 1.125;
