--- a/assets/styles/sass/_modules/_cta-image.scss
+++ b/assets/styles/sass/_modules/_cta-image.scss
@@ -1,5 +1,8 @@
 .module.cta-image {
 	h2 {
-		margin-bottom: 2.2rem;
+		margin-bottom: 0.6rem;
+		@include breakpoint(medium) {
+			margin-bottom: 2.2rem;
+		}
 	}
 }
