--- a/assets/styles/sass/_modules/_supporters.scss
+++ b/assets/styles/sass/_modules/_supporters.scss
@@ -10,7 +10,13 @@
 		background-size: 1px 100%, 100% 0px, 1px 100%, 100% 1px;
 	}	
 	}
-
+	.img-wrap {
+		margin-bottom: 1.5rem;
+		img {
+			max-height: 100px;
+			width: auto;
+		}
+	}
 	.inner-2 {
 		position: relative;
 		padding-top: 3.9rem;
@@ -19,6 +25,8 @@
 	&:after {
 		@include purple-dashed-border;
 		top: 0;
+		left: -0.9375rem;
+		
 		transform: rotate(180deg);
 		width: 1px;
 		height: 100%;
@@ -26,7 +34,8 @@
 	}	
 	&:after {
 		position: absolute;
-		right: 0;
+		left: auto;
+		right: -0.9375rem;
 	}
 	}
 	
