--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -119,6 +119,7 @@ CSS file.
 @import "_modules/people";
 @import "_modules/callout";
 @import "_modules/form-typeform";
+@import "_modules/banner-home-slider";
 
 @import "_posts/person";
 
