--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -120,6 +120,8 @@ CSS file.
 @import "_modules/callout";
 @import "_modules/form-typeform";
 @import "_modules/banner-home-slider";
+@import "_modules/form-campaign";
+@import "_modules/banner-campaign";
 
 @import "_posts/person";
 
