--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -122,6 +122,7 @@ CSS file.
 @import "_modules/banner-home-slider";
 @import "_modules/form-campaign";
 @import "_modules/banner-campaign";
+@import "_modules/calendar";
 
 @import "_posts/person";
 
