--- a/assets/styles/sass/_global.scss
+++ b/assets/styles/sass/_global.scss
@@ -481,6 +481,11 @@ a.download-map-btn.button.green-bg {
 			width: 48px;
 			height: 48px;
 			
+			img {
+				width: 100%;
+				max-height: 100%;
+			}
+			
 			@include breakpoint(tablet) {
 				width: 115px;
 				height: 115px;
