--- a/assets/styles/sass/_modules/_cta-color.scss
+++ b/assets/styles/sass/_modules/_cta-color.scss
@@ -10,5 +10,12 @@
 	.buttons {
 		justify-content: center;
 		padding-top: 1.9rem;
+		@include breakpoint(small down) {
+			flex-direction: column;
+			a.button {
+				width: auto !important;
+				min-width: 142px;
+			}
+		}
 	}
 }
