--- a/assets/styles/sass/_global.scss
+++ b/assets/styles/sass/_global.scss
@@ -154,10 +154,12 @@ a.color-fuchsia:hover {
 
 .color-white {
 	color: $white;	
+	ul,
+	ol,
 	i,
-	p
-	&.p
-	&a {
+	p,
+	.p,
+	a {
 		color: $white;
 	}
 }
@@ -287,7 +289,8 @@ article.page {
 	border-radius: 0;
 }
 
-.accordion-menu:not(.accordion-plus) .is-accordion-submenu-parent:not(.has-submenu-toggle) > a::after {
+.accordion-menu:not(.accordion-plus) .is-accordion-submenu-parent:not(.has-submenu-toggle) > a::after,
+#offcanvas-nav button.submenu-toggle::after {
 	display: block;
 	width: 10px;
 	height: 6px;
@@ -299,6 +302,7 @@ article.page {
 	right: 1rem;
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14.601' height='8.416' viewBox='0 0 14.601 8.416'%3E%3Cpath id='Path_1038' data-name='Path 1038' d='M5.62,11.773,0,5.9,5.62,0' transform='translate(1.414 7.033) rotate(-90)' fill='none' stroke='%23fff' stroke-linecap='round' stroke-width='2'/%3E%3C/svg%3E");
 	background-size: contain;
+	background-repeat: no-repeat; 
 }
 
 ul.accordion:not(.accordion-plus) li.accordion-item a.accordion-title{
@@ -446,7 +450,7 @@ a.download-map-btn.button.green-bg {
 		width: 12px;
 		height: 12px;
 		background-color: $white;
-		border: 1px solid $brand-amethyst;
+		border: 1px solid $brand-purple;
 		gap: 0;
 		margin: 5.5px;
 		opacity: 1;
@@ -458,7 +462,7 @@ a.download-map-btn.button.green-bg {
 		}
 		
 	&.swiper-pagination-bullet-active {
-		background-color: $brand-amethyst;
+		background-color: $brand-purple;
 	}
 		
 	}
@@ -466,6 +470,7 @@ a.download-map-btn.button.green-bg {
 
 .circle {
 	border-radius: 100%;
+	overflow: hidden;
 	.icon-wrap {
 		display: inline-block;
 		border-radius: 100%;
