--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -164,7 +164,7 @@ header.site-header {
 					box-shadow: 4px 4px 30px 0px rgba(0,0,0,0.16);
 					
 					@include breakpoint(xlarge down) {
-						transform: translateX(-10%);
+						transform: translateX(-20%);
 						left: 50%;
 						right: 0;
 					}
@@ -326,7 +326,7 @@ header.site-header {
 				span {
 					&:nth-child(2) {
 						top: 4px;
-						transform: translate(0px, 12px) rotate(-45deg);
+						transform: translate(0px, 13px) rotate(-45deg);
 					}
 			
 					&:nth-child(3) {
@@ -432,9 +432,12 @@ header.site-header {
 	ul#offcanvas-nav {
 		padding-top: 1rem;
 		padding-bottom: 1rem;
+		li.is-accordion-submenu-parent > a {
+			padding-right: 3rem;
+		}
 		> li {
 			position: relative;
-		&:not(:first-child):before{
+		&:not(:first-child):before {
 			@include white-dashed-border;
 			height: 1px;
 			width: 100%;
@@ -476,11 +479,21 @@ header.site-header {
 		}
 		
 		ul.submenu {
-			> li:first-child a {
-				padding-top: 2.2rem;
+			a {
+				padding-top: .6rem;
+				padding-bottom: .6rem;
 			}
-			> li:last-child a {
-				padding-bottom: 2.2rem;
+			> li:first-child > a {
+				padding-top: 1.2rem;
+				&:after {
+					margin-top: 3px;
+				}
+			}
+			> li:last-child > a {
+				padding-bottom: 1.2rem;
+				&:after {
+					margin-top: -7px;
+				}
 			}
 		}
 		
