--- a/assets/styles/sass/_modules/_calendar.scss
+++ b/assets/styles/sass/_modules/_calendar.scss
@@ -20,8 +20,7 @@
 		}
 	}
 	.tribe-common--breakpoint-medium.tribe-events .tribe-events-l-container {
-		padding-top: 0;
-		padding-left: 0;
-		padding-right: 0;
+		padding: 0;
+		min-height: 0;
 	}
 }
