--- a/assets/styles/sass/_modules/_cta-image.scss
+++ b/assets/styles/sass/_modules/_cta-image.scss
@@ -5,4 +5,11 @@
 			margin-bottom: 2.2rem;
 		}
 	}
+	
+	.right {
+		text-align: center;
+		@include breakpoint(small down) {
+			padding-bottom: 1.5rem;
+		}
+	}
 }
