--- a/assets/styles/sass/_modules/_gallery-slider.scss
+++ b/assets/styles/sass/_modules/_gallery-slider.scss
@@ -30,7 +30,7 @@
 			margin-top: 3.25rem;
 			position: relative;
 			width: 100%;
-			max-width: 736px;
+			max-width: 100%;
 			height: 2px;
 			background-color: #C5B7D8;
 			
@@ -38,6 +38,9 @@
 				.progress {
 					width: 65%;
 				}
+			}
+			@include breakpoint(tablet) {
+				max-width: 736px;
 			}
 			
 			div {
@@ -69,7 +72,7 @@
 	.swiper-slide {
 		position: relative;
 		width: auto;
-		max-width: 770px;
+		max-width: 100%;
 		text-align: center;
 		font-size: 18px;
 		background: #fff;
@@ -81,6 +84,10 @@
 			.progress {
 				width: 65%;
 			}
+		}
+		
+		@include breakpoint(tablet) {
+			max-width: 736px;
 		}
 		
 		img {
