--- a/assets/styles/sass/_modules/_list-circle-list.scss
+++ b/assets/styles/sass/_modules/_list-circle-list.scss
@@ -25,7 +25,7 @@
 				margin-bottom: 0;
 				padding: 2.9065rem;
 				@include breakpoint(small down) {
-					padding: 0.8125rem;
+					padding: 1.375rem;
 					>.grid-x {
 						width: 30px;
 						height: 30px;
@@ -44,6 +44,19 @@
 			}
 		}
 			
+		}
+		
+		.right-half {
+			@include breakpoint(medium) {
+				padding-left: 2rem;
+			}
+			.buttons {
+				@include breakpoint(small down) {
+					.cell {
+						width: 100%;
+					}
+				}
+			}
 		}
 		
 	}
