--- a/assets/styles/sass/_modules/_open-play-areas.scss
+++ b/assets/styles/sass/_modules/_open-play-areas.scss
@@ -1,7 +1,21 @@
 .module.open-play-areas {
+	.left {
+		@include breakpoint(small down) {
+			padding-bottom: .5rem;
+			.tabs-dropdown-wrap {
+				margin-bottom: 0.85rem;
+			}
+		}
+	}
+	@include breakpoint(small down) {
+		h2 {
+			text-align: center;
+			margin-bottom: 1.1rem;
+		}
+	}
 	.preview-tc-wrap {
 		position: relative;
-		
+
 		.previews {
 			display: none;
 			position: absolute;
@@ -13,6 +27,14 @@
 			.preview-card {
 				display: none;
 				background-color: $white;
+				z-index: 1;
+				position: relative;
+				padding-bottom: 2rem;
+				.left {
+					@include breakpoint(small down) {
+						margin-bottom: 1.5rem;
+					}
+				}
 				.top {
 					margin-bottom: 1.855rem;
 				}
@@ -39,7 +61,10 @@
 					}
 				}
 				.opa-types {
-					padding-top: 3rem;
+					padding-top: 1rem;
+					@include breakpoint(medium) {
+						padding-top: 3rem;
+					}
 				}
 			}
 			
@@ -79,4 +104,11 @@
 		}
 		
 	}
+	
+&.people {
+	h2 {
+		line-height: .9;
+	}
+}
+	
 }
