--- a/assets/styles/sass/_modules/_supporters.scss
+++ b/assets/styles/sass/_modules/_supporters.scss
@@ -26,11 +26,11 @@
 		@include purple-dashed-border;
 		top: 0;
 		left: -0.9375rem;
-		
 		transform: rotate(180deg);
 		width: 1px;
 		height: 100%;
 		background-size: 1px 100%, 100% 0px, 1px 100%, 100% 1px;
+		background-size: 1px 100%, 100% 0px, 0px 100%, 100% 1px;
 	}	
 	&:after {
 		position: absolute;
