--- a/assets/styles/sass/style.scss
+++ b/assets/styles/sass/style.scss
@@ -123,6 +123,7 @@ CSS file.
 @import "_modules/form-campaign";
 @import "_modules/banner-campaign";
 @import "_modules/calendar";
+@import "_modules/instagram";
 
 @import "_posts/person";
 
