--- a/assets/styles/sass/_header.scss
+++ b/assets/styles/sass/_header.scss
@@ -180,7 +180,11 @@ header.site-header {
 						> a {
 							font-weight: bold;
 							font-size: rem-calc(16);
-							line-height: rem-calc(18)
+							line-height: rem-calc(18);
+						&:hover {
+							text-decoration: underline;
+						}
+						
 						}
 						> ul {
 							position: relative;
@@ -208,6 +212,10 @@ header.site-header {
 								> a {
 									font-weight: 400;
 									font-size: rem-calc(14);
+								&:hover {
+									text-decoration: underline;
+								}
+								
 								}
 							}
 						}
@@ -442,6 +450,10 @@ header.site-header {
 			height: 1px;
 			width: 100%;
 			background-size: 1px 100%, 100% 0px, 1px 100%, 100% 1px;
+		}
+		
+		.submenu-toggle {
+			height: 62px;
 		}
 		
 		>a {
