--- a/assets/styles/sass/_modules/_form-campaign.scss
+++ b/assets/styles/sass/_modules/_form-campaign.scss
@@ -7,7 +7,7 @@
 			.gform_body.gform-body {
 				width: 100%;
 				[type=text], [type=password], [type=date], [type=datetime], [type=datetime-local], [type=month], [type=week], [type=email], [type=number], [type=search], [type=tel], [type=time], [type=url], [type=color], textarea {
-					height: auto;
+					height: 59px;
 					border-width: 0;
 					padding: 1rem 0 !important;
 					background-color: transparent;
