--- a/assets/styles/sass/_typography.scss
+++ b/assets/styles/sass/_typography.scss
@@ -123,6 +123,25 @@ a.p {
 	}
 }
 
+.text-wrap {
+	h1,
+	.h1,
+	h2,
+	.h2
+	h3,
+	.h3,
+	h4,
+	.h4,
+	h5,
+	.h5,
+	h6,
+	.h6,
+	h7,
+	.h7 {
+		margin-bottom: 0;
+	}
+}
+
 small {
 	font-size: rem-calc(12);
 	@include breakpoint (medium) {
